--- a/main.ipynb
+++ b/main.ipynb
@@ -38,62 +38,58 @@
     "from sensor_msgs.msg import Illuminance\n",
     "from geometry_msgs.msg import Twist\n",
     "\n",
-    "illuminance =0\n",
-    "\n",
     "# create a class to subscribe to sensor messages and show the data\n",
-    "class SubscribeAndShowNode(object):\n",
+    "class RoverIlluminanceController:\n",
+    "    SPIN_THRESHOLD = 300  # threshold to trigger spinning\n",
+    "    SPIN_SPEED = 1.0  # velocity for spinning\n",
+    "    STOP_SPEED = 0.0  # velocity for stopping\n",
+    "    \n",
+    "    \n",
     "    def __init__(self):\n",
-    "        global illuminance\n",
-    "        # subscribe to the topic ~imu from the rvr namespace\n",
+    "        rospy.init_node('rover_illuminance_controller', anonymous=True)\n",
     "        \n",
-    "        self.illuminance_sub = rospy.Subscriber('/rvr_driver/ambient_light', Illuminance, self.callback) #self.imu_sub\n",
+    "        self.illuminance = 0.0\n",
+    "        self.twist = Twist()\n",
     "        \n",
+    "        self.illuminance_sub = rospy.Subscriber('/rvr_driver/ambient_light', Illuminance, self.callback)\n",
     "        self.cmd_vel_pub = rospy.Publisher('/cmd_vel', Twist, queue_size=10)\n",
-    "        self.twist = Twist()        \n",
+    "        \n",
+    "        print('controller node started')       \n",
     "\n",
     "    # callback function to receive the data\n",
     "    def callback(self, msg):\n",
-    "        global illuminance\n",
-    "        \n",
     "        # print the data received\n",
-    "        illuminance =msg.illuminance\n",
-    "        print(f'illuminance: {illuminance}')\n",
+    "        self.illuminance = msg.illuminance\n",
+    "        print(f'Received illuminance: {self.illuminance}')\n",
     "        \n",
-    "        # check if value over limit\n",
-    "        if illuminance >= 300:\n",
-    "            self.rover_spin()\n",
-    "            print('spin')\n",
+    "        #check if rover should be spinning\n",
+    "        self.update_rover_motion()\n",
+    "            \n",
+    "    def update_rover_motion(self):\n",
+    "        #updates motion based on the illuminance\n",
+    "        if self.illuminance >= self.SPIN_THRESHOLD:\n",
+    "            self.set_rover_spin(self.SPIN_SPEED)\n",
     "        else:\n",
-    "            self.rover_stop_spin()\n",
-    "            print('stopspin')\n",
+    "            self.set_rover_spin(self.STOP_SPEED)\n",
     "            \n",
-    "    def rover_spin(self):\n",
-    "        self.twist.angular.z = 1.0  #spin speed\n",
-    "        self.cmd_vel_pub.publish(self.twist)\n",
-    "\n",
-    "    def rover_stop_spin(self):        \n",
-    "        self.twist.angular.z = 0.0\n",
-    "        self.cmd_vel_pub.publish(self.twist)\n",
-    "\n",
     "            \n",
-    "def main():\n",
-    "    try:\n",
-    "        # initialize the node with rospy\n",
-    "        rospy.init_node('subscribe_and_show_node', anonymous=True)\n",
+    "    def set_rover_spin(self, speed):\n",
+    "        #control rover spin\n",
+    "        self.twist.angular.z = speed\n",
+    "        self.cmd_vel_pub.publish(self.twist)\n",
+    "        print('rover spinning' if speed else 'rover stopped spinning')\n",
     "\n",
-    "        # create an instance of the SubscribeAndShowNode class\n",
-    "        # this will subscribe to the topic and show the data\n",
-    "        sub_show_node = SubscribeAndShowNode()\n",
-    "\n",
-    "        # spin() simply keeps python from exiting until this node is stopped\n",
+    "    def run(self):\n",
     "        rospy.spin()\n",
     "\n",
-    "    except rospy.ROSInterruptException as e:\n",
-    "        print(e)\n",
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "        controller = RoverIlluminanceController()\n",
+    "        controller.run()\n",
+    "    except rospy.ROSInterruptException:\n",
+    "        (\"Rover Illuminance Controller Node Interrupted\")\n",
     "    finally:\n",
-    "        print('Node has shutdown')\n",
-    "\n",
-    "main()"
+    "        rospy.loginfo(\"Node Shutdown\")"
    ]
   }
  ],
